--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!--===== YOUTUBE =====-->
             <section class="youtube section" id="youtube">
                 <h2 class="section-title">Latest YouTube Video</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://youtu.be/fXYrJ8SG27M?feature=shared" frameborder="0" allowfullscreen></iframe>
                 <p><a href="https://www.youtube.com/@Factstory-Ai" target="_blank">More on YouTube</a></p>
             </section>
 
